Add scripts.